--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   class="img-fluid"
                   alt="..."
                 />
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-md-block">
                   <h5></h5>
                   <p>3shwyat akeed mtstneesh t2ry haga</p>
                 </div>
